classDiagram
    direction TB

    %% --------------------------------------------------
    %% ENTIDADES BASE Y SIMPLE FACTORY (Usuarios)
    %% --------------------------------------------------
    class Usuario {
        <<Abstract>>
        -Long id
        -String email
        -String password
        -Rol rol
    }
    class Cliente {
        -String direccion
    }
    class Administrador {
        -String legajo
    }
    class UsuarioFactory {
        <<Simple Factory>>
        +crearCliente(dto): Cliente
        +crearAdministrador(dto): Administrador
    }

    Usuario <|-- Cliente
    Usuario <|-- Administrador
    UsuarioFactory ..> Cliente : crea
    UsuarioFactory ..> Administrador : crea

    %% --------------------------------------------------
    %% PATRÓN COMPOSITE (Catálogo de Muebles)
    %% --------------------------------------------------
    class ComponenteCatalogo {
        <<Interface>>
        +getPrecio(): Double
        +getNombre(): String
    }
    class Categoria {
        -String nombre
        -List~ComponenteCatalogo~ componentes
        +agregar(ComponenteCatalogo)
        +eliminar(ComponenteCatalogo)
        +getPrecio(): Double
    }
    class Producto {
        -String nombre
        -Double precioBase
        +getPrecio(): Double
    }
    class VarianteProducto {
        -String color
        -Integer stock
    }

    ComponenteCatalogo <|.. Categoria
    ComponenteCatalogo <|.. Producto
    Categoria o-- ComponenteCatalogo : contiene
    Producto *-- VarianteProducto : variantes

    %% --------------------------------------------------
    %% COMPRAS Y PEDIDOS
    %% --------------------------------------------------
    class Carrito {
        -Long id
        -Double total
    }
    class ItemCarrito {
        -Integer cantidad
        -Double subtotal
    }
    class Pedido {
        -Long id
        -EstadoPedido estado
        -Double total
        +setEstado(EstadoPedido)
    }
    class ItemPedido {
        -Integer cantidad
        -Double precioUnitario
    }

    Cliente "1" -- "1" Carrito : posee
    Carrito *-- "*" ItemCarrito : ítems
    ItemCarrito "1" -- "1" VarianteProducto : referencia
    Cliente "1" -- "*" Pedido : realiza
    Pedido *-- "*" ItemPedido : ítems
    ItemPedido "1" -- "1" VarianteProducto : referencia

    %% --------------------------------------------------
    %% PATRÓN STRATEGY (Métodos de Pago)
    %% --------------------------------------------------
    class MetodoPago {
        <<Strategy>>
        +procesarPago(Pedido)
        +getTipo(): TipoPago
    }
    class PagoTarjeta {
        +procesarPago(Pedido)
    }
    class PagoEfectivo {
        +procesarPago(Pedido)
    }
    class PagoTransferencia {
        +procesarPago(Pedido)
    }
    class CarritoServiceImpl {
        <<Context>>
        -Map~TipoPago, MetodoPago~ metodosPagoMap
        +confirmarCompra()
    }

    MetodoPago <|.. PagoTarjeta
    MetodoPago <|.. PagoEfectivo
    MetodoPago <|.. PagoTransferencia
    CarritoServiceImpl ..> MetodoPago : delega pago

    %% --------------------------------------------------
    %% PATRÓN STATE (Estados del Pedido)
    %% --------------------------------------------------
    class EstadoPedidoState {
        <<State>>
        +getEstado(): EstadoPedido
        +siguienteEstado(Pedido): EstadoPedido
    }
    class EstadoPedidoPendienteState {
        +siguienteEstado(Pedido)
    }
    class EstadoPedidoPagadoState {
        +siguienteEstado(Pedido)
    }
    class EstadoPedidoEnviadoState {
        +siguienteEstado(Pedido)
    }
    class EstadoPedidoEntregadoState {
        +siguienteEstado(Pedido)
    }
    class EstadoPedidoResolver {
        -Map~EstadoPedido, EstadoPedidoState~ states
        +resolve(EstadoPedido): EstadoPedidoState
    }
    class PedidoServiceImpl {
        <<Context / Publisher>>
        +avanzarEstadoPedido(Long)
    }

    EstadoPedidoState <|.. EstadoPedidoPendienteState
    EstadoPedidoState <|.. EstadoPedidoPagadoState
    EstadoPedidoState <|.. EstadoPedidoEnviadoState
    EstadoPedidoState <|.. EstadoPedidoEntregadoState
    EstadoPedidoResolver ..> EstadoPedidoState : resuelve
    PedidoServiceImpl ..> EstadoPedidoResolver : usa

    %% --------------------------------------------------
    %% PATRÓN OBSERVER (Notificaciones)
    %% --------------------------------------------------
    class PedidoEstadoActualizadoEvent {
        <<Event>>
        -Pedido pedido
    }
    class NotificacionPedidoListener {
        <<Observer>>
        +handlePedidoEstadoActualizadoEvent(Event)
    }

    PedidoServiceImpl ..> PedidoEstadoActualizadoEvent : publica evento
    NotificacionPedidoListener ..> PedidoEstadoActualizadoEvent : escucha evento